--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <canvas id="canvas1"></canvas>
     <h1>Add code here</h1>
     <script src="app.js"></script>
   </body>
